📝 docs: 함수 별칭 제거
- 기존 호환성을 위해 설정해놓은 함수 별칭 제거

--- a/vibeapp/templates/social/social.html
+++ b/vibeapp/templates/social/social.html
@@ -73,7 +73,7 @@
                                                     </div>
                                                     <div>
                                                         <button class="btn btn-primary btn-sm"
-                                                                onclick="FriendManager.viewFriendProfile('{{ friend.username }}')">
+                                                                onclick="FriendManager.viewProfile('{{ friend.username }}')">
                                                             👤 프로필
                                                         </button>
                                                     </div>
