--- a/vibeapp/static/css/responsive.css
+++ b/vibeapp/static/css/responsive.css
@@ -92,6 +92,10 @@
     font-size: 2rem;
   }
 
+  .user-platforms {
+    size: 24px;
+  }
+
   /* 통계 */
   .stats-grid {
     grid-template-columns: repeat(2, 1fr);
@@ -207,7 +211,7 @@
     font-size: 0.8rem;
   }
 
-  /* 사용자 아바타 */
+  /* 사용자 아바타 및 플랫폼 */
   .user-avatar {
     width: 32px;
     height: 32px;
@@ -224,6 +228,10 @@
     width: 48px;
     height: 48px;
     font-size: 1.25rem;
+  }
+
+  .user-platforms {
+    size: 24px;
   }
 
   /* 버튼 */
@@ -376,7 +384,7 @@
     font-size: 0.75rem;
   }
 
-  /* 사용자 아바타 */
+  /* 사용자 아바타 및 플랫폼 */
   .user-avatar {
     width: 28px;
     height: 28px;
@@ -399,6 +407,10 @@
     width: 24px;
     height: 24px;
     font-size: 0.7rem;
+  }
+
+  .user-platforms {
+    size: 24px;
   }
 
   /* 버튼 */
