--- a/vibeapp/templates/layout.html
+++ b/vibeapp/templates/layout.html
@@ -107,15 +107,16 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core JavaScript Files -->
         {% if session.user %}
-            <script src="{{ url_for('static', filename='js/api.js') }}"></script>
-            <script src="{{ url_for('static', filename='js/search.js') }}"></script>
+            <script src="{{ url_for('static', filename='js/core/api.js') }}"></script>
+            <script src="{{ url_for('static', filename='js/core/utils.js' )}}"></script>
+            <script src="{{ url_for('static', filename='js/modules/notifications.js')}}"></script>
+            <script src="{{ url_for('static', filename='js/modules/friends.js')}}"></script>
+            <script src="{{ url_for('static', filename='js/modules/search.js') }}"></script>
             <!-- 페이지별 JavaScript -->
             {% if request.endpoint == 'social.main' %}
-                <script src="{{ url_for('static', filename='js/friends.js') }}"></script>
-                <script src="{{ url_for('static', filename='js/social.js') }}"></script>
+                <script src="{{ url_for('static', filename='js/pages/social.js') }}"></script>
             {% elif request.endpoint == 'social.user_profile' %}
-                <script src="{{ url_for('static', filename='js/friends.js') }}"></script>
-                <script src="{{ url_for('static', filename='js/profile.js') }}"></script>
+                <script src="{{ url_for('static', filename='js/pages/profile.js') }}"></script>
             {% endif %}
         {% endif %}
     </body>
