✨ feature: 플레이리스트 DB 확인을 위한 관리자 기능 추가
- admin 페이지에 제대로 접근되지 않던 오류 수정
- 플레이리스트 DB 확인 기능 추가
- dashboard와 플레이리스트 DB 확인페이지 연결

--- a/vibeapp/templates/admin/admin_dashboard.html
+++ b/vibeapp/templates/admin/admin_dashboard.html
@@ -15,7 +15,7 @@
                     <a href="#">🚨 신고 내역 확인</a>
                 </li>
                 <li class="list-group-item">
-                    <a href="#">🎧 플레이리스트 분석</a>
+                    <a href="{{ url_for('admin.show_playlists') }}">🎧 플레이리스트 분석</a>
                 </li>
             </ul>
         </div>
